@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pivotal-tracker-0.5.13 (22 May 2015)
+
+  22 May 2015; Hans de Graaff <graaff@gentoo.org>
+  +pivotal-tracker-0.5.13.ebuild:
+  Version bump.
+
   22 May 2015; Hans de Graaff <graaff@gentoo.org>
   -pivotal-tracker-0.5.6.ebuild, -pivotal-tracker-0.5.10.ebuild:
   Cleanup.
